# pgwasm

./: pyproject.toml
pgwasm/: core.py  dbapi.py
tests/: conftest.py  test_dbapi.py  test_query.py
