[tool.poetry]
name = "pgwasm"
version = "0.1.0"
description = ""
authors = ["David Eklund <deklund@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wasmsockets = "^0.1.3"
scramp = "^1.4.4"
python-dateutil = "^2.8.2"


[tool.poetry.group.debug.dependencies]
ipython = "^8.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
